Sign Up, Log In, Alert components added, auth implemented

--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -40,6 +40,10 @@
   --clr-turquoise: #1abc9c;
   --clr-greensea: #16a085;
 
+  /* Red */
+  --clr-alizarin: #e74c3c;
+  --clr-pomegranate: #c0392b;
+
   /* Orange */
   --clr-sunflower: #f1c40f;
   --clr-orange: #f39c12;
