--- a/client/src/components/Questions/QuestionItem/QuestionItem.module.css
+++ b/client/src/components/Questions/QuestionItem/QuestionItem.module.css
@@ -7,6 +7,7 @@
   border-radius: 8px;
   background-color: var(--clr-clouds);
   box-shadow: 1px 1px 5px var(--clr-silver);
+  margin-top: 20px;
 }
 
 .user {
