--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -27,6 +27,13 @@
   width: 100%;
 }
 
+:global(.container) {
+  max-width: 1100px;
+  margin-top: 200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* Global colors */
 :root {
   /* Blue */
