--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -27,9 +27,19 @@
   width: 100%;
 }
 
+:global(button:disabled) {
+  background-color: var(--clr-silver);
+  cursor: not-allowed;
+}
+
+:global(button:disabled:hover) {
+  background-color: var(--clr-silver);
+  cursor: not-allowed;
+}
+
 :global(.container) {
   max-width: 1100px;
-  margin-top: 200px;
+  margin-top: 150px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -71,6 +81,7 @@
   /* Green */
   --clr-emerald: #2ecc71;
   --clr-nephritis: #27ae60;
+  --clr-lightgreen: #cff5df;
 
   --clr-turquoise: #1abc9c;
   --clr-greensea: #16a085;
