--- a/client/src/components/Question/Answer/Answer.module.css
+++ b/client/src/components/Question/Answer/Answer.module.css
@@ -15,6 +15,7 @@
   border: 1px solid var(--clr-silver);
   padding: 8px;
   border-radius: 3px;
+  height: 150px;
 }
 
 .user h3 {
@@ -24,13 +25,15 @@
 }
 
 .user img {
-  margin-top: 20px;
   height: 100px;
   width: 100px;
   border-radius: 100px;
 }
 
 .content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   flex: 1 1 auto;
 }
 
@@ -57,6 +60,7 @@
   padding: 8px;
   border-radius: 3px;
   margin-left: 25px;
+  height: 200px;
 }
 
 .upvotes h4 {
@@ -74,12 +78,18 @@
   cursor: pointer;
 }
 
+.buttons {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .btnFavourite {
   background-color: var(--clr-nephritis);
   color: white;
   outline: none;
   height: 30px;
-  width: 100px;
+  width: 110px;
   border: none;
   border-radius: 5px;
   margin-top: 10px;
@@ -96,15 +106,33 @@
   color: white;
   outline: none;
   height: 30px;
-  width: 100px;
+  width: 110px;
   border: none;
   border-radius: 5px;
   margin-top: 10px;
   cursor: pointer;
   transition: background-color 0.2s;
-  margin-left: 10px;
 }
 
 .btnUnfavourite:hover {
+  background-color: var(--clr-alizarin);
+}
+
+.btnDelete {
+  background-color: var(--clr-pomegranate);
+  display: inline-block;
+  color: white;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  height: 30px;
+  width: 50px;
+  margin-top: 10px;
+  margin-left: auto;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+
+.btnDelete:hover {
   background-color: var(--clr-alizarin);
 }
