--- a/client/src/components/Question/Question.module.css
+++ b/client/src/components/Question/Question.module.css
@@ -15,6 +15,7 @@
   border: 1px solid var(--clr-silver);
   padding: 8px;
   border-radius: 3px;
+  height: 150px;
 }
 
 .user h3 {
@@ -31,6 +32,9 @@
 
 .content {
   flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .content h3 {
