--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -45,6 +45,7 @@ a:active {
 .searchBar input[type='search'] {
   width: 300px;
   height: 40px;
+  padding: 5px;
   font-size: 100%;
   border-radius: 5px 0px 0px 5px;
   background-color: var(--clr-clouds);
