--- a/client/src/components/Question/Answer/Answer.module.css
+++ b/client/src/components/Question/Answer/Answer.module.css
@@ -15,7 +15,7 @@
   border: 1px solid var(--clr-silver);
   padding: 8px;
   border-radius: 3px;
-  height: 150px;
+  max-height: 170px;
 }
 
 .user h3 {
@@ -27,6 +27,7 @@
 .user img {
   height: 100px;
   width: 100px;
+  margin-left: 8px;
   border-radius: 100px;
 }
 
